...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/main_toolbar"
                    layout="@layout/toolbar" />

                <FrameLayout
                    android:id="@+id/container_body"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
...
